# free-games

./: .dockerignore  .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  schema.sql
.github/workflows/: lint.yml  unittests.yml
api/: Cargo.toml  Dockerfile
api/src/: database.rs  main.rs  paths.rs
bot/: Cargo.toml  Dockerfile
bot/src/: main.rs
scraper/: Cargo.toml  Dockerfile
scraper/src/: main.rs
scraper/src/stores/: mod.rs
scraper/src/stores/epicgames/: mod.rs  model.rs
scraper/src/stores/gog/: mod.rs  model.rs
scraper/src/stores/steam/: mod.rs
utils/: Cargo.toml
utils/src/: internal_api.rs  lib.rs  logging.rs  model.rs
