[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
fern = "0.7.0"
utils = { path = "../utils" }
log = "0.4.22"
postgres = "0.19.9"
serde_json = "1.0.140"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
serde = { version = "1.0.219", features = ["derive"] }
