[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
utils = { path = "../utils" }
twitter-v2 = "0.1.8"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
log = "0.4.27"
