[package]
name = "game-scraper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game_scraper"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
utils = { path = "../utils" }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
chrono = "0.4.41"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
scraper = "0.23.1"
